High: Replace Promoted/Running in dashboard with asterisk icon to avoid overflow issues

--- a/hawk/app/assets/stylesheets/_dashboard.scss
+++ b/hawk/app/assets/stylesheets/_dashboard.scss
@@ -192,7 +192,7 @@ table tr th {
   color: #fff;
   font-size: 10px;
   display: block;
-  width: 35px;
+  width: 2rem;
   margin: 0 auto;
   margin-top: 2px;
 }
